[metadata]
name = docker-test-tools
summary = docker-test-tools
license = MIT
description-file =
    README.md
author = Stratoscale
author-email = support@stratoscale.com
home-page = http://github.com/stratoscale/docker-test-tools.git
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[bdist_rpm]
release = 1
packager = stratoscale@stratoscale.com
doc_files = README.rst
no_autoreq = true
build_requires = python2-devel

[files]
packages =
    docker_test_tools
