[metadata]
name = docker-test-tools
summary = Make it easy to write tests that relies on docker containers environment
license = MIT
author = Stratoscale
author-email = support@stratoscale.com
home-page = http://github.com/stratoscale/docker-test-tools.git
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[bdist_rpm]
release = 1
packager = stratoscale@stratoscale.com
doc_files = README.rst
no_autoreq = true
build_requires = python2-devel

[files]
packages =
    docker_test_tools

[flake8]
ignore = E501,E123
max-line-length=145

[options.entry_points]
pytest11 =
    docker_test_tools = docker_test_tools.pytest_plugin.pytest_plugin

[bdist_wheel]
universal = 1
